# birb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
birb/: Cargo.toml
birb/examples/: birb.rs
birb/src/: lib.rs
birb_examples/: Cargo.toml
birb_examples/examples/: birb.rs  transform.rs
birb_log/: Cargo.toml
birb_log/examples/: log.rs
birb_log/src/: lib.rs
birb_maths/: Cargo.toml
birb_maths/src/: lib.rs  two.rs
birb_registry/: Cargo.toml
birb_registry/src/: lib.rs
birb_transform/: Cargo.toml
birb_transform/src/: lib.rs
birb_ui_generic/: Cargo.toml
birb_ui_generic/src/: lib.rs
birb_utils/: Cargo.toml
birb_utils/src/: time.rs
birb_window/: Cargo.toml
birb_window/src/: lib.rs
birb_winit/: Cargo.toml
birb_winit/examples/: window.rs
birb_winit/src/: lib.rs
registry/: Cargo.toml
registry/src/: lib.rs
