[package]
name = "birb_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
birb = { version = "0.1.0", path = "../birb" }
birb_maths = { version = "0.1.0", path = "../birb_maths" }
birb_transform = { version = "0.1.0", path = "../birb_transform" }
birb_utils = { version = "0.1.0", path = "../birb_utils" }
birb_window = { version = "0.1.0", path = "../birb_window" }
birb_winit = { version = "0.1.0", path = "../birb_winit" }
rayon = "1.8.0"
