[package]
name = "birb_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
birb = { version = "0.1.0", path = "../birb" }
birb_maths = { version = "0.1.0", path = "../birb_maths" }
parking_lot = "0.12.1"
