[package]
name = "birb_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
birb = { version = "0.1.0", path = "../birb" }
birb_window = { version = "0.1.0", path = "../birb_window" }
winit = "0.29.4"
